--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -631,7 +631,7 @@
       "departments_empty": "Cet utilisateur n'est lié à aucun département.",
       "edit_avatar_error": "Une erreur s'est produite lors de la mise à jour de l'avatar de l'utilisateur.",
       "contract": {
-        "open-ended": "Ouvert à tous",
+        "open-ended": "Longue durée",
         "fixed-term": "Durée déterminée",
         "short-term": "Court terme",
         "freelance": "Freelance",
