--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1642,6 +1642,15 @@
         "created_at": "",
         "updated_at": ""
       }
+    },
+    "row_actions": {
+      "change_avatar": "تغییر آواتار",
+      "change_password": "تغییر رمز عبور",
+      "delete": "حذف",
+      "edit": "ویرایش",
+      "history": "تاریخچه",
+      "refresh": "تازه‌سازی",
+      "restore": "بازیابی"
     }
   }
 }
